# UARTsim

./: .gitignore  README.md  uart_log.txt
include/: uart_sensor.h
scripts/: setup.sh
src/: CMakeLists.txt  main.cpp  uart_sensor.cpp
